# Archivist

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/archivist/: config.py  main.py  server.py
src/archivist/db/: qdrant.py
src/archivist/models/: schemas.py
src/archivist/resources/: collections.py  memory.py  search.py  server.py
src/archivist/routes/: collections.py  documents.py  health.py
src/archivist/services/: ingestion.py  retrieval.py
src/archivist/services/strategies/: __init__.py  base.py  docling.py  simple.py
src/archivist/tools/: memory.py  rag.py
